# pCQO-mis-benchmark

./: .gitignore  CHANGELOG.md  DNNMIS.py  DNNMIS_SAM.py  DNNMIS_SUBGRAPH.py  ILPMIS.py  IsmailOriginal.ipynb  README.md  Solver.py  Tables_rebuttal.md  benchmark.py  benchmark_large_graphs.py  datalessNN.py  datalessNN_graph_params.py  datalessNN_module.py  demo.ipynb  demo_no_MSE.ipynb  demo_with_LP.ipynb  demo_with_LP_reduction.ipynb  demo_with_SAM.ipynb  demo_with_SAM_Rho_Variation.ipynb  generate_SDP_solutions.py  gridsearch.py  pCQO_MIS_param_tuning_for_feasible_solutions_v01.ipynb  pcqo_mis_param_tuning_for_feasible_solutions_v01.py  requirements.txt
archive/: MIS_cont_objective_with_multiplicative_edges_penalty_CLEAN.ipynb  dNNMIS_SAM.py  dNNMIS_Subgraph.py  dNNMIS_Subgraph_V2.py  datalessNN.py  demo.ipynb  demo_with_LP_MIS.ipynb  demo_with_Subgraph.ipynb  layer_constraints.py
cpp_impl/: CMakeLists.txt  output.py  pcqo_mis.cpp  pcqomis.cpp
graph_generation/: gnm_evaluation_graphs.ipynb
lib/: SDP.py  Solver.py  custom_layers.py  dataset_generation.py
models/: datalessnet.py  quad_datalessnet.py
notebooks/: MAXCUT_Quad_v2.ipynb  MIS_Quadratic_Efficient_MISchecking.ipynb  MIS_SDP (1).ipynb  MIS_cont_objective_with_multiplicative_edges_penalty_2opt_CLEAN.ipynb  MIS_cont_objective_with_multiplicative_edges_penalty_withSDP_init.ipynb  performance_analysis_of_gnm_random_graphs.ipynb  satlib_with_LP_reduction.ipynb
solvers/: CPSATMIS.py  CPSAT_MIS.py  Gurobi_MIS.py  ILPMIS.py  KaMIS.py  Quadratic.py  Quadratic_Batch.py  Quadratic_SDP.py  Quadratic_SDPold.py  dNNMIS.py  dNNMIS_GPU.py  dNNMIS_GPU_TAU.py  dNNMIS_SAM.py  dNNMIS_Subgraph.py  dNN_Alkhouri_MIS.py  iSCO.py  pCQO_MIS.py  pCQO_MIS_GD.py  previous_work_MIS_dNNs.py
utils/: ER_evaluation_graphs.ipynb  NetworkX_to_DIMACS.ipynb  (+2 more)
(+879 files in other folders)
